--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1{
 .red-color{
     color: red;
 }
-section{
+.flexibal-container{
     display: flex;
     margin-bottom: 150px;
 }
@@ -38,4 +38,31 @@ section{
     background-image:url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+    background-position: left;
+}
+.experience-area{
+    background-image:url(images/exp-bg.png);
+    background-repeat: no-repeat;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow:10px 10px 40px gray ;
+}
+#web-dev-expereance{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon,tomato);
+    border-image-slice: 1;
+
+}
+footer p{
+    text-align: center;
 }
